--- a/index.html
+++ b/index.html
@@ -1,3 +1,31 @@
-This is the first page for my project
-getting set up 
-test text
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Christopher Gutama</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+
+
+</head>
+<body>
+    <div class="topPage">
+        <h1>Christopher Gutama</h1>
+        <div class="social-icons">
+            <a href="https://github.com/Chrisg3142">
+                <i class="fab fa-github fa-2x github-icon"></i>
+            </a>
+            <a href="www.linkedin.com/in/christopherg3142">
+                <i class="fab fa-linkedin fa-2x linkedin-icon"></i>
+            </a>
+        </div>
+       
+    </div>
+     
+    <h3>About</h3>
+
+      <script src="main.js"></script>
+</body>
+</html>
