--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body>
     <div class="topPage">
         <h1>Christopher Gutama</h1>
+        <div class="resume">
+            <p><a href="">View resume <i class="fas fa-arrow-up-right-from-square"></i></a></p>
+        </div>
         <div class="social-icons">
             <a href="https://github.com/Chrisg3142">
                 <i class="fab fa-github fa-2x github-icon"></i>
@@ -21,11 +24,42 @@
                 <i class="fab fa-linkedin fa-2x linkedin-icon"></i>
             </a>
         </div>
-       
+        <nav>
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
+        </nav>
     </div>
-     
-    <h3>About</h3>
+    <div class="main">
+        <div class="about">
+            <h3 id="about">About</h3>
+                <p>
+                    I am an upcoming junior at New York City College of Technology, 
+                    I am on track to gradute with a bachelors degree in Computer systems 
+                    a focus in software engineering in June 2027.I like to build projects on my
+                    free time and I love to work on problems that come up when I am building a project. 
+                    I take every challenge as a chance to grow and learn the proper steps to solve that 
+                    problem.
 
-      <script src="main.js"></script>
+                    <br><br>
+                    I don't spend all my time inside, I like to go out and play soccer with my friends or
+                    my little brother at the different piers in New York. I love to explore the city and see new 
+                    things or places. 
+                </p>
+        </div>   
+        <div class="projects">
+            <h3 id="projects">Projects</h3>
+        </div>
+        <div class="contact">
+            <h3 id="contact">Contact me!</h3>
+            <p>
+                I am always willing to explore new opertunities and would love to keep learning as I further develop my carreer
+                in software engineering with an interest in web development
+            </p>
+
+            <a id="contactBtn" href="mailto:christophergutama123@gmail,com">Say Hi</a>
+        </div>
+    </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
