adding resume in asset folder

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="topPage">
         <h1>Christopher Gutama</h1>
         <div class="resume">
-            <p><a href="">View resume <i class="fas fa-arrow-up-right-from-square"></i></a></p>
+            <p><a href="./assets/GutamaChristopherResume.pdf" target="_blank">View Resume <i class="fas fa-arrow-up-right-from-square"></i></a></p>
         </div>
         <div class="social-icons">
             <a href="https://github.com/Chrisg3142">
