--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <nav>
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
+            <a href="#contact">Contact Me</a>
         </nav>
     </div>
     <div class="main">
@@ -35,7 +36,7 @@
                 <p>
                     I am an upcoming junior at New York City College of Technology, 
                     I am on track to gradute with a bachelors degree in Computer systems 
-                    a focus in software engineering in June 2027.I like to build projects on my
+                    a focus in software engineering in June 2027. I like to build projects on my
                     free time and I love to work on problems that come up when I am building a project. 
                     I take every challenge as a chance to grow and learn the proper steps to solve that 
                     problem.
@@ -50,7 +51,7 @@
             <h3 id="projects">Projects</h3>
         </div>
         <div class="contact">
-            <h3 id="contact">Contact me!</h3>
+            <h3 id="contact">Contact Me</h3>
             <p>
                 I am always willing to explore new opertunities and would love to keep learning as I further develop my carreer
                 in software engineering with an interest in web development
